--- a/index.qmd
+++ b/index.qmd
@@ -108,16 +108,37 @@ Particularly relevant in the context of health data platforms (HDPs), is the con
 
 This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “data & analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms for primary data sharing (the original OpenHIE specification) to health data platforms for secondary data sharing. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for secondary data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the four types of data sharing as defined by de Reuver at al. (@tbl-types-data-sharing).
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for secondary data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the following different types of data sharing.
 
-|   | __Type of secondary data sharing__ | __Technology enablers to create openness of health data platforms__ |
-|:-:|:-------|:-------------|
-| __1__ | Data at the most granular (patient) level, which is persisted and used to provide a longitudinal record. | __Bulk FHIR API__: has by now been incorporated in all major FHIR implementations the FHIR standard can be readily used to support data sharing to patient-level data across a patient population [@mandl2020push;@jones2021landscape]. |
-| __2__ | Aggregated data, for example statistics for policy evaluation and benchmarking |__SQL-on-FHIR specification__ [@sql-on-fhir]: provides a standardised approach to make FHIR work well with familiar and efficient SQL engines that are most commonly used in analytical workflows. Builds on FHIRPath [@hl72020fhirpath] expressions in a logical structure to specify things like column names and unnested items. Implementations of this approach are available or forthcoming, including open source implementations such as Pathling [@grimes2022pathling] and commercial offerings like Aidbox [@aidbox].|
-| __3__ | Data analytics modules, that provide access to work and access the data. | __Federated learning (FL)__ [@rieke2020future] and __privacy- enhancing technologies (PETs)__ [@scheibner2021revolutionizing;@jordan2022selecting]: new paradigms that address the problem of data governance and privacy by training algorithms collaboratively without exchanging the data itself. Models can be trained on combined datasets and made available as open source artifacts for decision support. Data analysts can use FL and PETs to work with the data in a collaborative, decentralized fashion. |
-| __4__ | Trained models that have been derived from the data and can be used stand-alone for decision support. | __ONNX__ [@onnx]: an open format built to represent machine learning models. |
+#### 1. Sharing of data sets at the most granular (patient) level, persisted as longitudinal records
+The Shared Health Record (SHR) in OpenHIE provides an operational, real-time transactional data source which is intended for primary data sharing. The specification explicitly states that the SHR is distinct from a datawarehouse. At the same time, the Health Management Information System (HMIS) component is specified to fulfil functional requirements that are typically provided by datawarehouses.
 
-: Types of data sharing and in relation to new standards and technology enablers to create openness. Taken from de Reuver et al. (2022). {#tbl-types-data-sharing}
+- **Q1:** How can proven solution designs and modern technologies from data warehousing and engineering be integrated in the OpenHIE specification and how does this relate to the curren specifications of the SHR and HMIS.
+
+
+#### 2. Sharing of data products derived from the original data set
+OpenHIE specifies that the Health Management Information System (HMIS) component should support a workflow to validate and save aggregate data based on the emerging [IHE Aggregate Data Exchange (ADX) standard](https://www.ihe.net/uploadedFiles/Documents/QRPH/IHE_QRPH_Suppl_ADX.pdf). This is just one specific workflow within a larger data analytics value chain that covers i) collection, ii) standardization, iii) cleaning, iv) storage, v) analysis and vi) distribution [@curry2016big]. Sharing of benchmarking, and decision-support tools based on various statistical (machine learning) models that have been trained on data sets and/or data product, can be shared for standalone use.
+
+- **Q2:** How can proven solutions designs from the data warehousing and engineering community be included in OpenHIE to support sharing of wider variety of data products.
+
+#### 3. Sharing of secure computational environments to access and work with the data
+
+Current solution design of centralized data storage is increasingly being challenged. Recent work points to federated learning (FL) [@rieke2020future] and privacy- enhancing technologies (PETs) [@scheibner2021revolutionizing;@jordan2022selecting] as a better long-term solution to secure and equitable sharing of data. Given the resource constrained environments of LMICs, is is particularly challenging to devise a solution that is economically feasible and ... [TO DO: add feedback from Mark vdG]
+
+Federated solutions:
+
+- KETOS OMOP-FHIR [@gruendner2019ketos]
+- Personal Health Train on FHIR [@choudhury2020personal]
+- OHDSI analytics [@khalid2021standardized]
+- CODA project [@mullie2023coda]
+- GenoMed4All, in evalution phase for -omis [@cremonesi2023need]
+
+Similar approaches taken in the context of data sharing for pandemic response, for example:
+
+- VODAN Africa, based on electronic data capture with templates [@purnamajati2022data]
+- Global Data Sharing Initiative (GDSI) [@pirmani2023journey]
+
+- **Q3:** How can a solution be designed that is economically viable, can be deployed in a bottom-up fashion, support data governance principles ...
 
 ## Methods
 
@@ -157,6 +178,11 @@ Although FHIR was originally designed only for exchange between systems, we prop
 - The concept of FHIR Profiles allow localisation to tailor the standard to a specific use case. A profile defines rules, extensions, and constraints for a resource. We posit that the possible penalty of this flexibility, namely having to manage different FHIR versions and/or profiles, is less of an issue in the context of LMICs where first priority is to exchange datasets such as the International Patient Summary (IPS) that are less complex compared to the requirements for high income countries;
 - Being based on webstandards, the FHIR standard lends itself best for further separation of concerns as envisioned by the composable data stack. This is an important enabler for the downward scalability of the solution;
 - With its inherent, graph-like nature, FHIR can be readily incorporated into the principles of FAIR data sharing, where FHIR-based data repositories can be integrated in an overarching netwerk of FAIR data stations [@sinaci2023data;@pedrera-jimenez2023can].
+
+TO DO: re-use these elements from table 1 into this section:
+
+- Given that the Bulk FHIR API has by now been incorporated in all major FHIR implementations [@mandl2020push;@jones2021landscape], the FHIR standard can be readily used to bridge the gap between primary (transactional) and secondary (analytics) data sharing.
+- __SQL-on-FHIR specification__ [@sql-on-fhir]: provides a standardised approach to make FHIR work well with familiar and efficient SQL engines that are most commonly used in analytical workflows. Builds on FHIRPath [@hl72020fhirpath] expressions in a logical structure to specify things like column names and unnested items. Implementations of this approach are available or forthcoming, including open source implementations such as Pathling [@grimes2022pathling] and commercial offerings like Aidbox [@aidbox].  Modern data platforms take this Within the HL7 ecosystem much progress has been made to support "analytics-on-FHIR" with standards including [FHIRPath](https://hl7.org/fhirpath/) and the new SQL-on-FHIR specification [@sql-on-fhir]. Given the use of FHIR as the common data model (the rationale of which will be described later), we formulate the second design question:
 
 Possible risks pertaining to the use of FHIR as the common data model, most notably the possible incompatibilities and/or high costs of maintenance in supporting different versions, will be addressed in the Discussion.
 
