--- a/index.tex
+++ b/index.tex
@@ -129,7 +129,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Conceptualizing open health data platforms for low- and middle income countries},
-  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Antragama Abbas; Steven Wanyee; Alessandro Pietrobon; Ryan Chrichton; John Grimes; Paula van Brakel; Mark van der Graaf; Nicole Spieker; Mark de Reuver},
+  pdfauthor={Daniel Kapitan; Femke Heddema; Julie Fleischer; Chris Ihure; Steven Wanyee; Alessandro Pietrobon; Ryan Chrichton; John Grimes; Paula van Brakel; Mark van der Graaf; Nicole Spieker; Antragama Abbas; Mark de Reuver},
   pdfkeywords={Analytics-on-FHIR, SQL-on-FHIR, HIE, data
 platforms, LMICs, digital health},
   colorlinks=true,
@@ -161,23 +161,19 @@ income countries}
 %
 }
 
-\author[4]{Antragama Abbas%
+\author[4]{Steven Wanyee%
 %
 }
 
-\author[5]{Steven Wanyee%
+\author[5]{Alessandro Pietrobon%
 %
 }
 
-\author[6]{Alessandro Pietrobon%
+\author[6]{Ryan Chrichton%
 %
 }
 
-\author[7]{Ryan Chrichton%
-%
-}
-
-\author[8]{John Grimes%
+\author[7]{John Grimes%
 %
 }
 
@@ -193,7 +189,11 @@ income countries}
 %
 }
 
-\author[4]{Mark de Reuver%
+\author[8]{Antragama Abbas%
+%
+}
+
+\author[8]{Mark de Reuver%
 %
 }
 
@@ -206,16 +206,16 @@ Technology},city={Eindhoven},country={the
 Netherlands},countrysep={,},postcodesep={}}
 \affiliation[3]{organization={PharmAccess
 Kenya},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
-\affiliation[4]{organization={Delft University of
-Technology},city={Delft},country={the
-Netherlands},countrysep={,},postcodesep={}}
-\affiliation[5]{organization={IntelliSOFT},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
-\affiliation[6]{organization={ONA},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
-\affiliation[7]{organization={Jembi Health
+\affiliation[4]{organization={IntelliSOFT},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
+\affiliation[5]{organization={ONA},city={Nairobi},country={Kenya},countrysep={,},postcodesep={}}
+\affiliation[6]{organization={Jembi Health
 Systems},city={Durban},country={South
 Africa},countrysep={,},postcodesep={}}
-\affiliation[8]{organization={Australian e-Health Research
+\affiliation[7]{organization={Australian e-Health Research
 Centre},city={Brisbane},country={Australia},countrysep={,},postcodesep={}}
+\affiliation[8]{organization={Delft University of
+Technology},city={Delft},country={the
+Netherlands},countrysep={,},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
 
@@ -283,16 +283,9 @@ Case studies on digital platforms in healthcare point to an emerging
 pattern where the focus shifts from the digital platform with its
 defining software and hardware components, to the data as the primary
 object of interest in and of itself
-\citep{ozalp2022digital, alaimo2022organizations}. This development
-roughly correlates with the commonly used distinction between primary
-and secondary health data sharing \citep{cascini2024health}. While
-people are generally willing to share their health data to receive the
-best care (primary use), the attitude towards secondary use of health
-data varies greatly depending on the type and context. The shift in
-perspective from digital platforms supporting primary data sharing
-toward data platforms supporting secondary data sharing, ties in with
-the proposed research agenda by de Reuver et al.~to consider data
-platforms as a phenomenon distinct from digital platforms
+\citep{ozalp2022digital, alaimo2022organizations}. This observation ties
+into with the proposed research agenda by de Reuver et al.~to consider
+data platforms as a phenomenon distinct from digital platforms
 \citep{dereuver2022openness}. Generally, data platforms inherit the
 characteristics of digital platforms. From an economic perspective, for
 example, both types exhibit multi-sided markets. At the same time, data
@@ -311,8 +304,14 @@ destabilizing effects of dominant platforms on (democratic) societies.
 Instead of access to information, the control of personal data has
 emerged in the age of platforms as the critical contention.''
 \citep{keller2021paradox}. These conflicts are particularly salient in
-the healthcare domain, as is evidenced by the polemic surrounding data
-spaces \citep{otto2022designing} and data solidarity
+the healthcare domain, where people are generally willing to share their
+health data to receive the best care (primary use), while the attitude
+towards secondary use of health data varies greatly depending on the
+type and context \citep{cascini2024health}. The shift in perspective
+from digital platforms supporting primary data sharing toward data
+platforms supporting secondary data sharing is one of the key issues
+surrounding the polemic of data spaces \citep{otto2022designing} and
+data solidarity
 \citep{kickbusch2021lancet, prainsack2022data, prainsack2023beyond}.
 Openness is particularly relevant if we are to realize a
 solidarity-based approach to health data sharing that i) gives people a
@@ -332,15 +331,16 @@ architectural blueprint for implementing nation-wide health information
 exchanges (HIE), including Nigeria \citep{dalhatu2023paper}, Kenya
 \citep{thaiya2021adoption} and Tanzania \citep{nsaghurwe2021one}. These
 countries have, as a matter of course, extended the framework to include
-``analytics services'' as an additional domain. The rationale for this
-addition is to facilitate secondary reuse of health data for academic
-research, real-world evidence studies etc. which can be framed within
-the context of ongoing efforts towards Findable, Accessible,
+``data \& analytics services'' as an additional domain. The rationale
+for this addition is to facilitate secondary reuse of health data for
+academic research, real-world evidence studies etc. which can be framed
+within the context of ongoing efforts towards Findable, Accessible,
 Interoperable and Reusable (FAIR) sharing of health data
 \citep{guillot2023fair}. In doing so, however, we have implicitly moved
-from conceptualizing digital health platforms (the original OpenHIE
-specification) to health data platforms. This is problematic because the
-notion of openness, which is assumed to be essential in establishing
+from conceptualizing digital health platforms for primary data sharing
+(the original OpenHIE specification) to health data platforms for
+secondary data sharing. This is problematic because the notion of
+openness, which is assumed to be essential in establishing
 solidarity-based approaches to data sharing, is inherently different for
 a data platform compared to a digital platform.
 
@@ -349,81 +349,104 @@ digital platform. Openness for digital platforms refers to i) the use of
 open boundary resources, that is, specifications for the various
 healthcare specific workflows and information standards such as FHIR;
 and ii) the use of open source components that are available as digital
-public goods \citep{digitalpublicgoods}. Typically, these open source
-components are intended to support deployment in small countries
-(population up to 10 million) or large NGOs out of the box, and should
-provide a stepping stone for customized deployments in medium-sized
-countries (population around 40 million).\footnote{Although the OpenHIE
-  specification does not include details on dimensioning, these are
-  typically the requirements that are used within the community. See
-  \href{https://wiki.ohie.org/display/CP/Interoperability+Layer+-+Use+Cases+and+Requirements}{OpenHIE
-  Community Wiki}.} If we are to use the OpenHIE framework as an open
-data platform, we need to extend the standards, technologies and
-architecture to include functionality for data sharing and reuse. The
-lack of detailed specifications and consensus of this addition to
-OpenHIE currently stands in the way of development projects that aim to
-establish HDPs in LMICs. The purpose of this paper, therefore, is to
-specificy how new standards and technologies can be integrated into the
-OpenHIE architecture such that an open HDP can be realized that supports
-the four types of data sharing as defined by de Reuver at
-al.~(Table~\ref{tbl-types-data-sharing}).
+public goods \citep{digitalpublicgoods}. If we are to use the OpenHIE
+framework as an open data platform, we need to extend the standards,
+technologies and architecture to include functionality for secondary
+data sharing and reuse. The lack of detailed specifications and
+consensus of this addition to OpenHIE currently stands in the way of
+development projects that aim to establish HDPs in LMICs. The purpose of
+this paper, therefore, is to specificy how new standards and
+technologies can be integrated into the OpenHIE architecture such that
+an open HDP can be realized that supports the following different types
+of data sharing.
 
-\begin{longtable}[]{@{}
-  >{\centering\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.1200}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.3200}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.5600}}@{}}
-\caption{Types of data sharing and in relation to new standards and
-technology enablers to create openness. Taken from de Reuver et
-al.~(2022).}\label{tbl-types-data-sharing}\tabularnewline
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\centering
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Type of data sharing}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Technology enablers to create openness of health data platforms}
-\end{minipage} \\
-\midrule\noalign{}
-\endfirsthead
-\toprule\noalign{}
-\begin{minipage}[b]{\linewidth}\centering
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Type of data sharing}
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-\textbf{Technology enablers to create openness of health data platforms}
-\end{minipage} \\
-\midrule\noalign{}
-\endhead
-\bottomrule\noalign{}
-\endlastfoot
-\textbf{1} & Data at the most granular (patient) level, which is
-persisted and used to provide a longitudinal record. & \textbf{Bulk FHIR
-API}: has by now been incorporated in all major FHIR implementations the
-FHIR standard can be readily used to support data sharing to
-patient-level data across a patient population
-\citep{mandl2020push, jones2021landscape}. \\
-\textbf{2} & Aggregated data, for example statistics for policy
-evaluation and benchmarking & \textbf{SQL-on-FHIR specification}
-\citep{sql-on-fhir}: provides a standardised approach to make FHIR work
-well with familiar and efficient SQL engines that are most commonly used
-in analytical workflows. Builds on FHIRPath \citep{hl72020fhirpath}
-expressions in a logical structure to specify things like column names
-and unnested items. Implementations of this approach are available or
-forthcoming, including open source implementations such as Pathling
-\citep{grimes2022pathling} and commercial offerings like Aidbox
-\citep{aidbox}. \\
-\textbf{3} & Data analytics modules, that provide access to work and
-access the data. & \textbf{Federated learning (FL)}
-\citep{rieke2020future} and \textbf{privacy- enhancing technologies
-(PETs)} \citep{scheibner2021revolutionizing, jordan2022selecting}: new
-paradigms that address the problem of data governance and privacy by
-training algorithms collaboratively without exchanging the data itself.
-Models can be trained on combined datasets and made available as open
-source artifacts for decision support. Data analysts can use FL and PETs
-to work with the data in a collaborative, decentralized fashion. \\
-\textbf{4} & Trained models that have been derived from the data and can
-be used stand-alone for decision support. & \textbf{ONNX} \citep{onnx}:
-an open format built to represent machine learning models. \\
-\end{longtable}
+\subsubsection{1. Sharing of data sets at the most granular (patient)
+level, persisted as longitudinal
+records}\label{sharing-of-data-sets-at-the-most-granular-patient-level-persisted-as-longitudinal-records}
+
+The Shared Health Record (SHR) in OpenHIE provides an operational,
+real-time transactional data source which is intended for primary data
+sharing. The specification explicitly states that the SHR is distinct
+from a datawarehouse. At the same time, the Health Management
+Information System (HMIS) component is specified to fulfil functional
+requirements that are typically provided by datawarehouses.
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Q1:} How can proven solution designs and modern technologies
+  from data warehousing and engineering be integrated in the OpenHIE
+  specification and how does this relate to the curren specifications of
+  the SHR and HMIS.
+\end{itemize}
+
+\subsubsection{2. Sharing of data products derived from the original
+data
+set}\label{sharing-of-data-products-derived-from-the-original-data-set}
+
+OpenHIE specifies that the Health Management Information System (HMIS)
+component should support a workflow to validate and save aggregate data
+based on the emerging
+\href{https://www.ihe.net/uploadedFiles/Documents/QRPH/IHE_QRPH_Suppl_ADX.pdf}{IHE
+Aggregate Data Exchange (ADX) standard}. This is just one specific
+workflow within a larger data analytics value chain that covers i)
+collection, ii) standardization, iii) cleaning, iv) storage, v) analysis
+and vi) distribution \citep{curry2016big}. Sharing of benchmarking, and
+decision-support tools based on various statistical (machine learning)
+models that have been trained on data sets and/or data product, can be
+shared for standalone use.
+
+\begin{itemize}
+\tightlist
+\item
+  \textbf{Q2:} How can proven solutions designs from the data
+  warehousing and engineering community be included in OpenHIE to
+  support sharing of wider variety of data products.
+\end{itemize}
+
+\subsubsection{3. Sharing of secure computational environments to access
+and work with the
+data}\label{sharing-of-secure-computational-environments-to-access-and-work-with-the-data}
+
+Current solution design of centralized data storage is increasingly
+being challenged. Recent work points to federated learning (FL)
+\citep{rieke2020future} and privacy- enhancing technologies (PETs)
+\citep{scheibner2021revolutionizing, jordan2022selecting} as a better
+long-term solution to secure and equitable sharing of data. Given the
+resource constrained environments of LMICs, is is particularly
+challenging to devise a solution that is economically feasible and
+\ldots{} {[}TO DO: add feedback from Mark vdG{]}
+
+Federated solutions:
+
+\begin{itemize}
+\tightlist
+\item
+  KETOS OMOP-FHIR \citep{gruendner2019ketos}
+\item
+  Personal Health Train on FHIR \citep{choudhury2020personal}
+\item
+  OHDSI analytics \citep{khalid2021standardized}
+\item
+  CODA project \citep{mullie2023coda}
+\item
+  GenoMed4All, in evalution phase for -omis \citep{cremonesi2023need}
+\end{itemize}
+
+Similar approaches taken in the context of data sharing for pandemic
+response, for example:
+
+\begin{itemize}
+\item
+  VODAN Africa, based on electronic data capture with templates
+  \citep{purnamajati2022data}
+\item
+  Global Data Sharing Initiative (GDSI) \citep{pirmani2023journey}
+\item
+  \textbf{Q3:} How can a solution be designed that is economically
+  viable, can be deployed in a bottom-up fashion, support data
+  governance principles \ldots{}
+\end{itemize}
 
 \section{Methods}\label{methods}
 
@@ -446,7 +469,8 @@ platforms in LMICs, namely:
   the OpenHIM platform
   (\url{https://jembi.gitbook.io/openhim-platform/})
 \item
-  the ONA Canopy platform \url{https://ona.io/home/services/canopy/}
+  the OnaData platform
+  \url{https://ona.io/home/products/ona-data/features/}
 \item
   the work conducted at PharmAccess Foundation as part of the MomCare
   programme (\url{https://health-data-commons.pharmaccess.org}).
@@ -582,6 +606,32 @@ here for the following reasons:
   stations \citep{sinaci2023data, pedrera-jimenez2023can}.
 \end{itemize}
 
+TO DO: re-use these elements from table 1 into this section:
+
+\begin{itemize}
+\tightlist
+\item
+  Given that the Bulk FHIR API has by now been incorporated in all major
+  FHIR implementations \citep{mandl2020push, jones2021landscape}, the
+  FHIR standard can be readily used to bridge the gap between primary
+  (transactional) and secondary (analytics) data sharing.
+\item
+  \textbf{SQL-on-FHIR specification} \citep{sql-on-fhir}: provides a
+  standardised approach to make FHIR work well with familiar and
+  efficient SQL engines that are most commonly used in analytical
+  workflows. Builds on FHIRPath \citep{hl72020fhirpath} expressions in a
+  logical structure to specify things like column names and unnested
+  items. Implementations of this approach are available or forthcoming,
+  including open source implementations such as Pathling
+  \citep{grimes2022pathling} and commercial offerings like Aidbox
+  \citep{aidbox}. Modern data platforms take this Within the HL7
+  ecosystem much progress has been made to support ``analytics-on-FHIR''
+  with standards including \href{https://hl7.org/fhirpath/}{FHIRPath}
+  and the new SQL-on-FHIR specification \citep{sql-on-fhir}. Given the
+  use of FHIR as the common data model (the rationale of which will be
+  described later), we formulate the second design question:
+\end{itemize}
+
 Possible risks pertaining to the use of FHIR as the common data model,
 most notably the possible incompatibilities and/or high costs of
 maintenance in supporting different versions, will be addressed in the
@@ -635,10 +685,10 @@ taken one step further. A composable data system
 (layer 1) from the execution engine by introducing standards including
 Substrait for Intermediate Representation (standard A, IR) and Apache
 Arrow for data connectivity and data memory layout (standards B and C,
-respectively). The composable data stack can be implemented with current
-open source technologies (\textbf{?@fig-cds-examples}). As an example,
-the Ibis user interface is currently sufficiently mature to offer a
-standardized dataframe interface to 19 different execution engines.
+respectively). The first generation of open source components are
+already available. For example, the Ibis user interface is currently
+sufficiently mature to offer a standardized dataframe interface to 19
+different execution engines \citep{ibisproject}.
 
 \begin{figure}
 
@@ -901,16 +951,24 @@ goods}\label{open-technologies-deploying-instant-openhie-with-digital-public-goo
 
 Today, many components of the OpenHIE specification are now available as
 a digital public goods, as listed in
-Table~\ref{tbl-digital-public-goods}. To further ease the development,
-configuration and deployment of health information exchanges, the
-concept of `Instant OpenHIE' has been championed to (i) allow
-implementers to engage with a preconfigured health information exchange
-solution and running tools (based on the architecture) and test their
-applicability and functionality with a real health context problem; and
-(ii) have a packaged reference version of the OpenHIE architecture that
-is comprised of a set of reference technologies and other appropriate
-tools that form the building blocks of the health information exchange
-that can be configured and extended to support particular use cases
+Table~\ref{tbl-digital-public-goods}. Typically, these open source
+components are intended to support deployments in small countries
+(population up to 10 million) or large NGOs out of the box, and should
+provide a stepping stone for customized deployments in medium-sized
+countries (population around 40 million).\footnote{Although the OpenHIE
+  specification does not include details on dimensioning, these are
+  typically the requirements that are used within the community. See
+  \href{https://wiki.ohie.org/display/CP/Interoperability+Layer+-+Use+Cases+and+Requirements}{OpenHIE
+  Community Wiki}.} To further ease the development, configuration and
+deployment of health information exchanges, the concept of `Instant
+OpenHIE' has been championed to (i) allow implementers to engage with a
+preconfigured health information exchange solution and running tools
+(based on the architecture) and test their applicability and
+functionality with a real health context problem; and (ii) have a
+packaged reference version of the OpenHIE architecture that is comprised
+of a set of reference technologies and other appropriate tools that form
+the building blocks of the health information exchange that can be
+configured and extended to support particular use cases
 \citep{InstantOpenHIEv2}. Besides the core functional components of the
 OpenHIE architecture, the Instant OpenHIE toolkit allows packaging and
 integration of generic components such as Identity and Access Managment
@@ -1158,7 +1216,7 @@ to be implemented in more regions. This need led to a redesign of the
 underlying technical infrastructure of the MomCare project. The
 objectives of this work were in fact to demonstrate a solution design
 that could support the first three types of data sharing listed in
-Table~\ref{tbl-types-data-sharing}. First, to investigate the viability
+\textbf{?@tbl-types-data-sharing}. First, to investigate the viability
 of using FHIR for bulk data sharing, MomCare Tanzania was used a testbed
 to assess the complexity and effort required to implement the facade
 pattern to integrate the legacy system into the FHIR data standard.
